hq sandbox - latest/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <label>Closed Won?</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Stabilized</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Grade2__c</fullName>
        <formula>if(and( Closed_Won__c &gt;0, ispickval(Customer_Grade__c,&quot;1&quot;)),  IMAGE(&quot;/servlet/servlet.FileDownload?file= 015300000035HDI&quot;, &quot;Happy&quot;, 32,32), 
if(and( Closed_Won__c &gt;0, ispickval(Customer_Grade__c,&quot;2&quot;)),  IMAGE(&quot;/servlet/servlet.FileDownload?file= 015300000035HDN&quot;, &quot;Moderate&quot;, 32,32), 
if(and( Closed_Won__c &gt;0, ispickval(Customer_Grade__c,&quot;3&quot;)),  IMAGE(&quot;/servlet/servlet.FileDownload?file= 015300000035HDM&quot;, &quot;Not Happy&quot;, 32,32),
if(and( Closed_Won__c &gt;0, ispickval(Customer_Grade__c,&quot;4&quot;)),  IMAGE(&quot;/servlet/servlet.FileDownload?file= 015300000035HKr&quot;, &quot;Dead&quot;, 32,32),
if(and( Closed_Won__c &gt;0, ispickval(Customer_Grade__c,&quot;&quot;)), IMAGE(&quot;/servlet/servlet.FileDownload?file= 015300000035HAH&quot;, &quot;Call&quot;, 32,32),&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Grade__c</fullName>
        <label>Customer Grade</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Sync_From_HubSpot__c</fullName>
        <description>This is for HubSpot use only</description>
        <label>Sync From HubSpot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sds__Allow_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__Duplicate_Key__c</fullName>
        <label>Duplicate Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sds__Master_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Master Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sds__Not_duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Search</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
</CustomObject>